<resources>
    <string name="app_name">ControlDispositivos</string>
    <string name="aire_acondicionado">Aire Acondicionado</string>
    <string name="entrada">Entrada</string>
    <string name="modo_auto">Modo:Auto</string>
    <string name="_23_c">23°C</string>
    <string name="menos">-</string>
    <string name="signomas">+</string>
    <string name="altavoz">Altavoz</string>
    <string name="mi_habitacion">Mi habitacion</string>
    <string name="smart_tv">Smart TV</string>
    <string name="living">Living</string>
    <string name="luz_de_techo">Luz de techo</string>
    <string name="habitacion_de_los_ni_os">Habitacion de los niños</string>
    <string name="nombre">Nombre</string>
    <string name="pswd">Contraseña</string>
    <string name="forgot">¿Olvidaste tu contraseña?</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="Sing_in">Registrarse</string>
    <string name="Sign_in">Registrarse</string>
    <string name="reemplazar">aca algo mas</string>
    <string name="tu_hogar">tu hogar</string>
    <string name="homeA">home</string>
    <string name="analysisA">analysis</string>
    <string name="habitacionesA">habitaciones</string>
    <string name="configA">config</string>
    <string name="an_lisis">Análisis</string>
    <string name="consumo">Consumo</string>
    <string name="registro">Registro</string>
    <string name="al_menos_un_signo">* Al menos un signo @ _ # $ %</string>
    <string name="al_menos_un_n_mero">* Al menos un número</string>
    <string name="al_menos_8_caracteres">* Al menos 8 caracteres</string>
    <string name="requisitos_de_contrase_a">Requisitos de contraseña:</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="registrarse">Registrarse</string>
    <string name="app_logo">App logo</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="idioma">Idioma</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="ver_ayuda">Ver ayuda</string>
    <string name="todo">TODO</string>
</resources>