<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/palido1">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/blueObs"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/confirmar_contrase_a"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requisitos_de_contrase_a"
        android:textSize="16sp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/al_menos_8_caracteres"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/al_menos_un_n_mero"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/al_menos_un_signo"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/turq"
        android:textColor="@color/blueObs"
        />

</LinearLayout>